--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,20 @@
 server:
   port: 8016
+  servlet:
+    encoding:
+      force-response: true
+      charset: UTF-8
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:13306/wanted
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:13306/wanted?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8
     username: wanted
     password: backend
-    driver-class-name: com.mysql.cj.jdbc.Driver
 
   # JPA 설정
   jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: none        # DB 초기화 전략 (none, create, create-drop, update, validate)
     properties:
@@ -18,6 +23,8 @@ spring:
         globally_quoted_identifiers: false
         format_sql: true     # 쿼리 로그 포맷 (정렬)
         show_sql: true       # 쿼리 로그 출력
+        jdbc:
+          time_zone: UTC
 
 logging:
   level:
